# cudASCII

./: CMakeLists.txt  README.md
include/: constants.h  core.h
src/: ascii.cu  ascii.h  color_format.h  cudASCII.cu  cudascii.cu  image.cu  image.h
src/image/: image.cu  image.h
src/image/image_types/: bmp.cu  image_types.cu  image_types.h
src/image_types/: bmp.cu  bmp.h
src/renderer/: cuda_renderer.cu  cuda_renderer.h
